chore: config package.json for npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-thermal-receipt-printer-image-qr",
+  "name": "react-native-thermal-receipt-printer-sync",
   "version": "0.1.12",
   "description": "Fork of react-native-thermal-receipt-printer. A React Native Library to support USB/BLE/Net printer",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thiendangit/react-native-thermal-receipt-printer-image-qr"
+    "url": "https://github.com/trieulongben/react-native-thermal-printer"
   },
   "files": [
     "dist",
@@ -58,7 +58,7 @@
   "peerDependencies": {
     "react-native-ping": "*"
   },
-  "author": "thiendangit",
-  "homepage": "https://github.com/thiendangit/react-native-thermal-receipt-printer-image-qr#readme",
+  "author": "longle",
+  "homepage": "https://github.com/trieulongben/react-native-thermal-printer#readme",
   "license": "ISC"
 }
